FIX: focus color dark applied, added white gap between btn and focus

--- a/frontend/src/metabase/css/components/buttons.module.css
+++ b/frontend/src/metabase/css/components/buttons.module.css
@@ -25,7 +25,8 @@
 }
 
 .Button:focus {
-  outline: 2px solid var(--mb-color-focus);
+  border: 2px solid var(--mb-base-color-white);
+  outline: 2px solid var(--mb-color-focus-dark);
 }
 
 .Button:focus:not(:focus-visible) {
